UAT_Backup_All_8Jan2024_0624/Backup-Source/objects/GCP_100Pct_Analysis_Unique__c.object
<CustomObject>
    <description>This Object&apos;s Records are same for all the accounts.</description>
    <fields>
        <fullName>DRL_Act_Price__c</fullName>
        <label>DRL Act Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DRL_Act_Sales__c</fullName>
        <label>DRL Act Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DRL_Act_Tpt_Pct__c</fullName>
        <label>DRL Act  Tpt Pct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DRL_Act_Tpt__c</fullName>
        <label>DRL Act  Tpt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GCP_Product_Family__c</fullName>
        <label>GCP Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCP_Suggested_Price__c</fullName>
        <label>GCP Suggested Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GCP_Unique_Identifier__c</fullName>
        <label>Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMS_Mat_Volume_Eu__c</fullName>
        <label>IMS Mat Volume Eu</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ims_Mat_Month_Range__c</fullName>
        <label>Ims Mat Month Range</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ims_Mat_Sales__c</fullName>
        <label>Ims Mat Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prof_Month_range__c</fullName>
        <label>Prof Month range</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Product_Family__c</fullName>
        <label>Vision Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Updated_date__c</fullName>
        <label>Vision Updated date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cogs_per_unit__c</fullName>
        <label>cogs per unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>drl_act_eu__c</fullName>
        <label>drl act eu</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>drl_act_volume_eu__c</fullName>
        <label>drl act volume eu</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>drl_mkt_share_acct__c</fullName>
        <label>drl mkt share acct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ims_drl_mrkt_share_qtr__c</fullName>
        <label>ims drl mrkt share qtr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ims_qtr_month_range__c</fullName>
        <label>ims qtr month range</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vision_segment__c</fullName>
        <label>Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>GCP 100Pct Analysis Unique</label>
    <nameField>
        <displayFormat>100%-Anay-SKU-UNQ-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GCP 100Pct Analysis Unique</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>